styles/main.css
body {
	background-color: white;
	margin: 0;
}

.wrapper {
	width: 85%;
	height: auto;
	background-color: white;
	margin-left: 7.5%;
	margin-right: 7.5%;
}

.dynamic-wrapper {
	margin-top: 2%;
}

.navigation {
	background-color: #f2f2f2;
}

.page-footer {
	background-color: #f2f2f2;
}

#search {
	width: 400px;
	border-radius: 10px;
	height: 50px;
	margin-top: .8%;
}

img, .card {
	border-radius: 10px;
}

.logo-img {
	height: 60px;
	width: auto;
	margin-right: 10px;
}

.logout-button {
	margin-right: 2%;
	margin-top: .8%;
}

.cork {

}

